--- a/create_docstore_and_embed.ipynb
+++ b/create_docstore_and_embed.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1753860489170
@@ -10,36 +10,21 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Loaded FAISS index (358 vectors) and ID set from disk.\n",
-            "Syncing VectorStore with DocumentStore...\n",
-            "Found 1 missing documents. Indexing in batches of 128...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2025-09-11 10:35:18,790 - INFO - HTTP Request: POST http://127.0.0.1:1234/v1/embeddings \"HTTP/1.1 200 OK\"\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Saved FAISS index (359 vectors) and ID set.\n",
-            "Saved FAISS index (359 vectors) and ID set.\n",
-            "Saved FAISS index (359 vectors) and ID set.\n",
-            "Sync complete.\n"
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'implementations.kme_doc'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mconfig\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msettings\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Settings\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcontent_retrieval\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m query_document, llm,doc_store, summary_doc_store ,embed,embedding\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpipelines\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprocessors\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m summarize_new_documents, add_new_documents_to_docstore\n\u001b[32m     20\u001b[39m settings = Settings()\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mk:\\Repo\\Python\\contentcreatie\\content_retrieval.py:7\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mllm_client\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m llm_client\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mllm_client\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdocument_vector_store\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m      3\u001b[39m     DocumentStore,\n\u001b[32m      4\u001b[39m     VectorStore,\n\u001b[32m      5\u001b[39m     SimpleDocument\n\u001b[32m      6\u001b[39m )\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimplementations\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mkme_doc\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m KMEDocument\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mconfig\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msettings\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m settings\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Get client configurations from settings\u001b[39;00m\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'implementations.kme_doc'"
           ]
         }
       ],
       "source": [
         "import openai\n",
         "from importlib import reload\n",
-        "from utils.structure_content import process_folder_concurrently,StructuredDocument\n",
         "from llm_client import llm_client\n",
         "from llm_client.agent import MultiTurnAgent\n",
         "from llm_client.prompt_builder import  PromptBuilder\n",
@@ -50,13 +35,12 @@
         "    SimpleDocument,\n",
         "    VectorStore\n",
         ")\n",
-        "from kme_doc import KMEDocument\n",
+        "from pipelines.kme_doc import KMEDocument\n",
         "from tqdm import tqdm\n",
         "import pandas as pd\n",
         "import os\n",
         "from config.settings import Settings\n",
         "from content_retrieval import query_document, llm,doc_store, summary_doc_store ,embed,embedding\n",
-        "from pipelines.processors import summarize_new_documents, add_new_documents_to_docstore\n",
         "settings = Settings()"
       ]
     },
