--- a/test_notebooks/summary_test.ipynb
+++ b/test_notebooks/summary_test.ipynb
@@ -8,20 +8,21 @@
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'utils'",
+     "evalue": "No module named 'contentcreatie'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenai\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimportlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m reload\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstructure_content\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m process_folder_concurrently,StructuredDocument\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mllm_client\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m llm_client\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mllm_client\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01magent\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MultiTurnAgent\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'utils'"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenai\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimportlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m reload\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcontentcreatie\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstructure_content\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m process_folder_concurrently,StructuredDocument\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mllm_client\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m llm_client\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mllm_client\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01magent\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MultiTurnAgent\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'contentcreatie'"
      ]
     }
    ],
    "source": [
+    "import os\n",
     "import openai\n",
     "from importlib import reload\n",
-    "from utils.structure_content import process_folder_concurrently,StructuredDocument\n",
+    "from contentcreatie.utils.structure_content import process_folder_concurrently,StructuredDocument\n",
     "from llm_client import llm_client\n",
     "from llm_client.agent import MultiTurnAgent\n",
     "from llm_client.prompt_builder import  PromptBuilder\n",
@@ -32,7 +33,7 @@
     "    SimpleDocument,\n",
     "    VectorStore\n",
     ")\n",
-    "from kme_doc import KMEDocument\n",
+    "from pipelines.kme_doc import KMEDocument\n",
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "import os\n",
@@ -51,9 +52,9 @@
    "source": [
     "summary_processor = PromptBuilder(template_path='prompt_templates',name='summarize')\n",
     "from content_retrieval import query_document, llm,doc_store, summary_doc_store ,embed,embedding\n",
-    "from implementations.tools import VectorSearchTool, DocumentSearchTool, DocumentShortlistTool\n",
+    "from implementations.tools import VectorSearchTool, DocumentSearchTool, DocumentRelevanceTool\n",
     "vs_tool = VectorSearchTool(vector_store=embedding)\n",
-    "slt = DocumentShortlistTool()\n",
+    "slt = DocumentRelevanceTool()\n",
     "prompt_processor = PromptBuilder('prompt_templates','search') \n",
     "agent = MultiTurnAgent(\n",
     "    llm_processor=llm,\n",
