project unit tests

--- a/create_docstore_and_embed.ipynb
+++ b/create_docstore_and_embed.ipynb
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -107,7 +107,7 @@
       "source": [
         "stats = summarize_new_documents(\n",
         "    doc_store=doc_store,\n",
-        "    summary_doc_store=summary_doc_store,\n",
+        "    #summary_doc_store=summary_doc_store,\n",
         "    prompt_builder=summary_processor,\n",
         "    llm=llm,\n",
         "    KMEDocument_cls=KMEDocument,\n",
