--- a/create_docstore_and_embed.ipynb
+++ b/create_docstore_and_embed.ipynb
@@ -2,35 +2,26 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1753860489170
         }
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Initialized new FAISS index with dimension 3072.\n",
-            "Syncing VectorStore with DocumentStore...\n",
-            "VectorStore is already in sync. No new documents to add.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from llm_client.prompt_builder import  PromptBuilder\n",
         "import pandas as pd\n",
         "from config.settings import Settings\n",
-        "from content_retrieval import llm,doc_store\n",
+        "from content_retrieval import llm,doc_store, vector_store\n",
         "from pipelines.processors import summarize_new_documents, add_new_documents_to_docstore\n",
-        "settings = Settings()"
+        "import sys\n",
+        "settings = Settings()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1753427069467
@@ -50,23 +41,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "kme_documents = pd.read_pickle(settings.content_folder / \"extracted_df_km.pkl\").reset_index()\n",
-        "kme_documents = kme_documents.set_index(\"km_nummer\").join(kme_vertaaltabel).reset_index()\n",
-        "ob_documents = kme_documents.query(\"BELASTINGSOORT == 'OB - Omzetbelasting'\")\n",
-        "results = add_new_documents_to_docstore(ob_documents,doc_store)"
+        "kme_documents = pd.read_pickle(settings.content_folder / \"extracted_df_km.pkl\",compression='gzip').reset_index()\n",
+        "kme_documents = kme_documents.set_index(\"km_nummer\").join(kme_vertaaltabel).reset_index()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "summary_processor = PromptBuilder(template_path='prompt_templates',name='summarize')"
+        "results = add_new_documents_to_docstore(kme_documents,doc_store)"
       ]
     },
     {
@@ -78,7 +67,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "summary_processor = PromptBuilder(template_path='prompt_templates',name='summarize')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import logging\n",
+        "import sys\n",
+        "\n",
+        "# Set up logging to see all debug messages from the Azure SDK\n",
+        "logger = logging.getLogger('azure')\n",
+        "logger.setLevel(logging.DEBUG)\n",
+        "\n",
+        "# Create a handler to write logs to standard out\n",
+        "handler = logging.StreamHandler(stream=sys.stdout)\n",
+        "handler.setLevel(logging.DEBUG)\n",
+        "logger.addHandler(handler)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -86,9 +103,9 @@
         "    doc_store=doc_store,\n",
         "    prompt_builder=summary_processor,\n",
         "    llm=llm,\n",
-        "    max_workers=10,\n",
+        "    max_workers=20,\n",
         "    start=0,\n",
-        "    count=1500,\n",
+        "    count=7000,\n",
         "    show_progress=True\n",
         ")"
       ]
@@ -97,82 +114,68 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Overriding of current TracerProvider is not allowed\n",
-            "Overriding of current LoggerProvider is not allowed\n",
-            "Overriding of current MeterProvider is not allowed\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Attempting to instrument while already instrumented\n",
-            "Attempting to instrument while already instrumented\n",
-            "Attempting to instrument while already instrumented\n",
-            "Attempting to instrument while already instrumented\n",
-            "Attempting to instrument while already instrumented\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "MLflow Tracking URI: azureml://northeurope.api.azureml.ms/mlflow/v2.0/subscriptions/f475c0e3-1450-42c9-a3b7-cbc1e54c2078/resourceGroups/ino-rg-kis-poc/providers/Microsoft.MachineLearningServices/workspaces/KIS-POC\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "from azure.ai.ml import MLClient\n",
-        "from azure.identity import DefaultAzureCredential\n",
-        "\n",
-        "subscription_id = \"f475c0e3-1450-42c9-a3b7-cbc1e54c2078\"\n",
-        "resource_group = \"ino-rg-kis-poc\"\n",
-        "workspace_name = \"KIS-POC\"\n",
-        "\n",
-        "ml_client = MLClient(\n",
-        "    DefaultAzureCredential(), subscription_id, resource_group, workspace_name\n",
-        ")\n",
-        "\n",
-        "# --- Get the MLflow tracking URI ---\n",
-        "mlflow_tracking_uri = ml_client.workspaces.get(workspace_name).mlflow_tracking_uri\n",
-        "print(f\"MLflow Tracking URI: {mlflow_tracking_uri}\")\n",
-        "mlflow.set_tracking_uri(mlflow_tracking_uri)\n",
-        "\n",
-        "# --- Set the tracking URI for your MLflow environment ---\n",
-        "import mlflow\n",
-        "\n"
+        "doc_store.save()\n",
+        "doc_store.rebuild_search_index()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from dataclasses import dataclass, asdict\n",
+        "import json\n",
+        "\n",
+        "def save(dstore):\n",
+        "        \"\"\"Saves the current document dictionary to a Parquet file.\"\"\"\n",
+        "        if not dstore.documents:\n",
+        "            # Save an empty DataFrame with the correct schema\n",
+        "            df = pd.DataFrame(columns=['id', 'title', 'content', 'metadata'])\n",
+        "        else:\n",
+        "            # Convert dict of Document objects to a list of dicts\n",
+        "            doc_list = [asdict(doc) for doc in dstore.documents.values()]\n",
+        "            df = pd.DataFrame.from_records(doc_list)\n",
+        "            \n",
+        "            # Serialize the metadata dict to a JSON string for Parquet compatibility\n",
+        "            df['metadata'] = df['metadata'].apply(json.dumps)\n",
+        "        persist= '/home/azureuser/cloudfiles/code/Users/a.melzer/Contentcreatie/data/docstores/kme_content/documents.parquet'\n",
+        "        try:\n",
+        "            # Save to Parquet using pyarrow engine\n",
+        "            df.to_parquet(persist, index=False, engine='pyarrow')\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error saving Parquet file {persist}: {e}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "save(doc_store)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
-          "ename": "HttpResponseError",
-          "evalue": "(InvalidSubscriptionId) The provided subscription identifier 'None' is malformed or invalid.\nCode: InvalidSubscriptionId\nMessage: The provided subscription identifier 'None' is malformed or invalid.",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mHttpResponseError\u001b[39m                         Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mml_client\u001b[49m\u001b[43m.\u001b[49m\u001b[43mworkspaces\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mKIS-POC\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m.mlflow_tracking_uri\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m/anaconda/envs/content/lib/python3.12/site-packages/azure/ai/ml/_telemetry/activity.py:288\u001b[39m, in \u001b[36mmonitor_with_activity.<locals>.monitor.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    284\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m tracer.start_as_current_span(ACTIVITY_SPAN):\n\u001b[32m    285\u001b[39m         \u001b[38;5;28;01mwith\u001b[39;00m log_activity(\n\u001b[32m    286\u001b[39m             logger.package_logger, activity_name \u001b[38;5;129;01mor\u001b[39;00m f.\u001b[34m__name__\u001b[39m, activity_type, custom_dimensions\n\u001b[32m    287\u001b[39m         ):\n\u001b[32m--> \u001b[39m\u001b[32m288\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    289\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(logger, \u001b[33m\"\u001b[39m\u001b[33mpackage_logger\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    290\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m log_activity(logger.package_logger, activity_name \u001b[38;5;129;01mor\u001b[39;00m f.\u001b[34m__name__\u001b[39m, activity_type, custom_dimensions):\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m/anaconda/envs/content/lib/python3.12/site-packages/azure/core/tracing/decorator.py:138\u001b[39m, in \u001b[36mdistributed_trace.<locals>.decorator.<locals>.wrapper_use_tracer\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    136\u001b[39m             \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m span_attributes.items():\n\u001b[32m    137\u001b[39m                 span.add_attribute(key, value)  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m138\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    139\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    140\u001b[39m     \u001b[38;5;66;03m# Native path\u001b[39;00m\n\u001b[32m    141\u001b[39m     config = {}\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m/anaconda/envs/content/lib/python3.12/site-packages/azure/ai/ml/operations/_workspace_operations.py:141\u001b[39m, in \u001b[36mWorkspaceOperations.get\u001b[39m\u001b[34m(self, name, **kwargs)\u001b[39m\n\u001b[32m    120\u001b[39m \u001b[38;5;129m@monitor_with_activity\u001b[39m(ops_logger, \u001b[33m\"\u001b[39m\u001b[33mWorkspace.Get\u001b[39m\u001b[33m\"\u001b[39m, ActivityType.PUBLICAPI)\n\u001b[32m    121\u001b[39m \u001b[38;5;129m@distributed_trace\u001b[39m\n\u001b[32m    122\u001b[39m \u001b[38;5;66;03m# pylint: disable=arguments-renamed\u001b[39;00m\n\u001b[32m    123\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, name: Optional[\u001b[38;5;28mstr\u001b[39m] = \u001b[38;5;28;01mNone\u001b[39;00m, **kwargs: Dict) -> Optional[Workspace]:\n\u001b[32m    124\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Get a Workspace by name.\u001b[39;00m\n\u001b[32m    125\u001b[39m \n\u001b[32m    126\u001b[39m \u001b[33;03m    :param name: Name of the workspace.\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    138\u001b[39m \u001b[33;03m            :caption: Get the workspace with the given name.\u001b[39;00m\n\u001b[32m    139\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m141\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworkspace_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m/anaconda/envs/content/lib/python3.12/site-packages/azure/ai/ml/operations/_workspace_operations_base.py:89\u001b[39m, in \u001b[36mWorkspaceOperationsBase.get\u001b[39m\u001b[34m(self, workspace_name, **kwargs)\u001b[39m\n\u001b[32m     87\u001b[39m workspace_name = \u001b[38;5;28mself\u001b[39m._check_workspace_name(workspace_name)\n\u001b[32m     88\u001b[39m resource_group = kwargs.get(\u001b[33m\"\u001b[39m\u001b[33mresource_group\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._resource_group_name\n\u001b[32m---> \u001b[39m\u001b[32m89\u001b[39m obj = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_operation\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresource_group\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mworkspace_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     90\u001b[39m v2_service_context = {}\n\u001b[32m     92\u001b[39m v2_service_context[\u001b[33m\"\u001b[39m\u001b[33msubscription_id\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mself\u001b[39m._subscription_id\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m/anaconda/envs/content/lib/python3.12/site-packages/azure/core/tracing/decorator.py:138\u001b[39m, in \u001b[36mdistributed_trace.<locals>.decorator.<locals>.wrapper_use_tracer\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    136\u001b[39m             \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m span_attributes.items():\n\u001b[32m    137\u001b[39m                 span.add_attribute(key, value)  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m138\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    139\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    140\u001b[39m     \u001b[38;5;66;03m# Native path\u001b[39;00m\n\u001b[32m    141\u001b[39m     config = {}\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m/anaconda/envs/content/lib/python3.12/site-packages/azure/ai/ml/_restclient/v2024_10_01_preview/operations/_workspaces_operations.py:957\u001b[39m, in \u001b[36mWorkspacesOperations.get\u001b[39m\u001b[34m(self, resource_group_name, workspace_name, **kwargs)\u001b[39m\n\u001b[32m    955\u001b[39m     map_error(status_code=response.status_code, response=response, error_map=error_map)\n\u001b[32m    956\u001b[39m     error = \u001b[38;5;28mself\u001b[39m._deserialize.failsafe_deserialize(_models.ErrorResponse, pipeline_response)\n\u001b[32m--> \u001b[39m\u001b[32m957\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m HttpResponseError(response=response, model=error, error_format=ARMErrorFormat)\n\u001b[32m    959\u001b[39m deserialized = \u001b[38;5;28mself\u001b[39m._deserialize(\u001b[33m'\u001b[39m\u001b[33mWorkspace\u001b[39m\u001b[33m'\u001b[39m, pipeline_response)\n\u001b[32m    961\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m:\n",
-            "\u001b[31mHttpResponseError\u001b[39m: (InvalidSubscriptionId) The provided subscription identifier 'None' is malformed or invalid.\nCode: InvalidSubscriptionId\nMessage: The provided subscription identifier 'None' is malformed or invalid."
-          ]
+          "data": {
+            "text/plain": [
+              "'/home/azureuser/cloudfiles/code/Users/a.melzer/Contentcreatie/data/docstores/kme_content/documents.pkl'"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "ml_client.workspaces.get(\"KIS-POC\").mlflow_tracking_uri"
+        "doc_store.persistence_file"
       ]
     },
     {
@@ -202,7 +205,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.12"
     },
     "microsoft": {
       "host": {
