--- a/test_notebooks/create_docstore_and_embed.ipynb
+++ b/test_notebooks/create_docstore_and_embed.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "gather": {
           "logged": 1753860489170
@@ -10,10 +10,13 @@
       },
       "outputs": [],
       "source": [
-        "from llm_client.prompt_builder import  PromptBuilder\n",
+        "import os\n",
+        "os.chdir(\"..\")\n",
+        "from contentcreatie.llm_client.prompt_builder import  PromptBuilder\n",
         "import pandas as pd\n",
-        "from config.settings import Settings\n",
-        "from content_retrieval import llm,doc_store, vector_store\n",
+        "from contentcreatie.config.settings import Settings\n",
+        "from contentcreatie.config.paths import paths\n",
+        "from test_notebooks.content_retrieval import llm,doc_store, vector_store\n",
         "from pipelines.processors import summarize_new_documents, add_new_documents_to_docstore\n",
         "import sys\n",
         "settings = Settings()\n"
@@ -21,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "gather": {
           "logged": 1753427069467
@@ -29,7 +32,7 @@
       },
       "outputs": [],
       "source": [
-        "kme_vertaaltabel = pd.read_csv(settings.data_root /  \"kme_vertaaltabel.csv\",sep=';').set_index(\"KME_ID\")"
+        "kme_vertaaltabel = pd.read_csv(paths.base_dir /\"data\" /  \"kme_vertaaltabel.csv\",sep=';').set_index(\"KME_ID\")"
       ]
     },
     {
@@ -41,19 +44,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
-        "kme_documents = pd.read_pickle(settings.content_folder / \"extracted_df_km.pkl\",compression='gzip').reset_index()\n",
+        "kme_documents = pd.read_pickle(paths.content_folder / \"extracted_df_km.pkl\",compression='gzip').reset_index()\n",
         "kme_documents = kme_documents.set_index(\"km_nummer\").join(kme_vertaaltabel).reset_index()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 189/189 [00:00<00:00, 23289.37it/s]\n"
+          ]
+        }
+      ],
       "source": [
         "results = add_new_documents_to_docstore(kme_documents,doc_store)"
       ]
@@ -67,16 +78,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
-        "summary_processor = PromptBuilder(template_path='prompt_templates',name='summarize')"
+        "summary_processor = PromptBuilder(template_path=paths.base_dir/'Contentcreatie'/ 'prompt_templates',name='summarize')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -95,9 +106,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Summarizing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 131/131 [00:39<00:00,  3.33it/s]\n"
+          ]
+        }
+      ],
       "source": [
         "stats = summarize_new_documents(\n",
         "    doc_store=doc_store,\n",
@@ -112,9 +131,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Rebuilding search index for 6723 documents...\n",
+            "Successfully indexed 6723 documents.\n"
+          ]
+        }
+      ],
       "source": [
         "doc_store.save()\n",
         "doc_store.rebuild_search_index()"
@@ -122,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -151,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -160,16 +188,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'/home/azureuser/cloudfiles/code/Users/a.melzer/Contentcreatie/data/docstores/kme_content/documents.pkl'"
+              "'/mnt/batch/tasks/shared/LS_root/mounts/clusters/kis-compute-web/code/Users/a.melzer/Contentcreatie/data/docstores/kme_content/documents.parquet'"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -177,13 +205,6 @@
       "source": [
         "doc_store.persistence_file"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -205,7 +226,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.12"
     },
     "microsoft": {
       "host": {
