fixed problem where agent wouldn't work if chat wasn't open, fix for missing docs

--- a/test_notebooks/content_extraction.ipynb
+++ b/test_notebooks/content_extraction.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "gather": {
           "logged": 1762156610406
@@ -46,7 +46,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 6782/6782 [00:27<00:00, 243.60it/s]\n"
+            "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 6782/6782 [00:29<00:00, 227.69it/s]\n"
           ]
         }
       ],
@@ -71,6 +71,36 @@
         "extracted_df = pd.DataFrame(html_docs.values())\n",
         "extracted_df['km_nummer'] = extracted_df['id']\n",
         "print(f\"Extracted {len(extracted_df)} documents\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "source_file                               content_tridion_end/KM1053350.html\n",
+              "title                      Waarom krijg ik in 2025 meer/minder huurtoesla...\n",
+              "private_answer_html        <p><strong>Meer/minder huurtoeslag t.o.v. vori...\n",
+              "private_answer_text        Meer/minder huurtoeslag t.o.v. vorig jaar?\\nDe...\n",
+              "publicAnswer_html                                                           \n",
+              "publicAnswer_text                                                           \n",
+              "links_in_private_answer                                                   []\n",
+              "full_text                  Public Answer:  Private Answer: Meer/minder hu...\n",
+              "tags                       [Tridion (oud), 02. Hoogte toeslag, 02. Hoogte...\n",
+              "km_nummer                                                          KM1053350\n",
+              "Name: KM1053350, dtype: object"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "extracted_df.set_index(\"id\").loc['KM1053350']"
       ]
     },
     {
