--- a/test_notebooks/create_docstore_and_embed.ipynb
+++ b/test_notebooks/create_docstore_and_embed.ipynb
@@ -2,13 +2,25 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "gather": {
           "logged": 1753860489170
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "StorageService: No Connection String found. Attempting DefaultAzureCredential...\n",
+            "/mnt/batch/tasks/shared/LS_root/mounts/clusters/kis-compute-web/code/Users/a.melzer/Contentcreatie\n",
+            "Loaded FAISS index (6723 vectors) and ID set from disk.\n",
+            "Syncing VectorStore with DocumentStore...\n",
+            "VectorStore is already in sync. No new documents to add.\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "os.chdir(\"..\")\n",
@@ -24,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "gather": {
           "logged": 1753427069467
@@ -32,7 +44,8 @@
       },
       "outputs": [],
       "source": [
-        "kme_vertaaltabel = pd.read_csv(paths.base_dir /\"data\" /  \"kme_vertaaltabel.csv\",sep=';').set_index(\"KME_ID\")"
+        "kme_vertaaltabel = pd.read_csv(paths.base_dir /\"data\" /  \"kme_vertaaltabel.csv\",sep=';').set_index(\"KME_ID\")\n",
+        "kme_vertaaltabel['BELASTINGSOORT'] = kme_vertaaltabel['BELASTINGSOORT'].str.split('/')"
       ]
     },
     {
@@ -44,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -78,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -87,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -106,17 +119,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 34,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Summarizing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 131/131 [00:39<00:00,  3.33it/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "stats = summarize_new_documents(\n",
         "    doc_store=doc_store,\n",
@@ -150,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -187,24 +192,70 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Update taxonomie"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'/mnt/batch/tasks/shared/LS_root/mounts/clusters/kis-compute-web/code/Users/a.melzer/Contentcreatie/data/docstores/kme_content/documents.parquet'"
-            ]
-          },
-          "execution_count": 21,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n"
+          ]
         }
       ],
       "source": [
-        "doc_store.persistence_file"
+        "docs = kme_documents.set_index('km_nummer')\n",
+        "for doc in doc_store.documents:\n",
+        "    if(len(doc_store.documents[doc].metadata['BELASTINGSOORT'])>1):\n",
+        "        print(1)\n",
+        "    \n",
+        "    "
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "save(doc_store)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -226,7 +277,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.12"
+      "version": "3.12.11"
     },
     "microsoft": {
       "host": {
