fixed problem where taxnomy items where incorrect

--- a/test_notebooks/create_docstore_and_embed.ipynb
+++ b/test_notebooks/create_docstore_and_embed.ipynb
@@ -2,25 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1753860489170
         }
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "StorageService: No Connection String found. Attempting DefaultAzureCredential...\n",
-            "/mnt/batch/tasks/shared/LS_root/mounts/clusters/kis-compute-web/code/Users/a.melzer/Contentcreatie\n",
-            "Loaded FAISS index (6723 vectors) and ID set from disk.\n",
-            "Syncing VectorStore with DocumentStore...\n",
-            "VectorStore is already in sync. No new documents to add.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import os\n",
         "os.chdir(\"..\")\n",
@@ -36,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1753427069467
@@ -45,19 +33,19 @@
       "outputs": [],
       "source": [
         "kme_vertaaltabel = pd.read_csv(paths.base_dir /\"data\" /  \"kme_vertaaltabel.csv\",sep=';').set_index(\"KME_ID\")\n",
-        "kme_vertaaltabel['BELASTINGSOORT'] = kme_vertaaltabel['BELASTINGSOORT'].str.split('/')"
+        "kme_vertaaltabel['BELASTINGSOORT'] = kme_vertaaltabel['BELASTINGSOORT'].str.split('/',n=1).str[0]"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Opbouwen Doc store van pdf"
+        "# Opbouwen van de Document Store"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -67,19 +55,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 189/189 [00:00<00:00, 23289.37it/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "results = add_new_documents_to_docstore(kme_documents,doc_store)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "current_docs = kme_documents.km_nummer.values\n",
+        "current_keys = list(doc_store.documents.keys())\n",
+        "for kmnr in current_keys:\n",
+        "    if kmnr not in current_docs:\n",
+        "        doc_store.documents.pop(kmnr)"
       ]
     },
     {
@@ -91,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -100,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -119,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -136,59 +129,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Rebuilding search index for 6723 documents...\n",
-            "Successfully indexed 6723 documents.\n"
-          ]
-        }
-      ],
-      "source": [
-        "doc_store.save()\n",
-        "doc_store.rebuild_search_index()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from dataclasses import dataclass, asdict\n",
-        "import json\n",
-        "\n",
-        "def save(dstore):\n",
-        "        \"\"\"Saves the current document dictionary to a Parquet file.\"\"\"\n",
-        "        if not dstore.documents:\n",
-        "            # Save an empty DataFrame with the correct schema\n",
-        "            df = pd.DataFrame(columns=['id', 'title', 'content', 'metadata'])\n",
-        "        else:\n",
-        "            # Convert dict of Document objects to a list of dicts\n",
-        "            doc_list = [asdict(doc) for doc in dstore.documents.values()]\n",
-        "            df = pd.DataFrame.from_records(doc_list)\n",
-        "            \n",
-        "            # Serialize the metadata dict to a JSON string for Parquet compatibility\n",
-        "            df['metadata'] = df['metadata'].apply(json.dumps)\n",
-        "        persist= '/home/azureuser/cloudfiles/code/Users/a.melzer/Contentcreatie/data/docstores/kme_content/documents.parquet'\n",
-        "        try:\n",
-        "            # Save to Parquet using pyarrow engine\n",
-        "            df.to_parquet(persist, index=False, engine='pyarrow')\n",
-        "        except Exception as e:\n",
-        "            print(f\"Error saving Parquet file {persist}: {e}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "save(doc_store)"
+        "doc_store.rebuild_search_index()\n",
+        "doc_store.save()"
       ]
     },
     {
@@ -200,62 +146,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n"
-          ]
-        }
-      ],
-      "source": [
-        "docs = kme_documents.set_index('km_nummer')\n",
-        "for doc in doc_store.documents:\n",
-        "    if(len(doc_store.documents[doc].metadata['BELASTINGSOORT'])>1):\n",
-        "        print(1)\n",
-        "    \n",
-        "    "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 31,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "save(doc_store)"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "vector_store.sync_with_store()"
+      ]
     }
   ],
   "metadata": {
@@ -277,7 +173,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.12"
     },
     "microsoft": {
       "host": {
